[project]
name = "reg-regression-toolkit"
version = "0.1.0"
description = "Toolkit for regularized regression classification workflows."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "N/A"}
]
keywords = ["machine-learning", "regularization", "classification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "shap>=0.42",
  "umap-learn>=0.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "jupyter>=1.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["reg_regression_toolkit*"]

[tool.uv]
package = true
